--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "boxicons": "^2.1.4",
-    "next": "13.5.4",
+    "glightbox": "^3.2.0",
+    "next": "^13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "eslint": "^8",
